[package]
name = "api"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.8.1"
dotenvy = "0.15.7"
phpify = "0.1.0-beta4"
serde = { version = "1.0.217", features = ["derive"] }
serde_json = "1.0.138"
sqlx = { version = "0.8.3", features = ["mysql", "tls-rustls", "runtime-tokio"] }
tokio = { version = "1.43.0", features = ["full"] }
